--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookiefile": "^1.0.10",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
     "puppeteer": "^10.1.0"
