--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "cookiefile": "^1.0.10",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^10.1.0",
-    "socket.io": "^4.1.3"
+    "puppeteer": "^10.1.0"
   }
 }
