--- a/package.json
+++ b/package.json
@@ -1,17 +1,24 @@
 {
   "name": "ytc-crawler",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
-  "author": "",
+  "author": "HitomaruKonpaku ",
   "license": "ISC",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.10",
     "cookiefile": "^1.0.10",
     "dotenv": "^10.0.0",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^10.1.0"
+    "puppeteer": "^10.1.0",
+    "winston": "^3.3.3",
+    "winston-console-format": "^1.0.8"
+  },
+  "devDependencies": {
+    "@types/node": "^16.3.3",
+    "@types/node-fetch": "^2.5.11",
+    "tslib": "^2.3.0",
+    "typescript": "^4.3.5"
   }
 }
