--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "cheerio": "^1.0.0-rc.10",
     "cookiefile": "^1.0.10",
     "dotenv": "^10.0.0",
+    "minimist": "^1.2.5",
     "node-fetch": "^2.6.1",
     "puppeteer": "^10.1.0",
-    "winston": "^3.3.3",
-    "winston-console-format": "^1.0.8"
+    "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/minimist": "^1.2.2",
     "@types/node": "^16.3.3",
     "@types/node-fetch": "^2.5.11",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
