Separate & rewrite into classes

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -43,6 +43,7 @@
     ],
     "no-debugger": "off",
     "no-empty-function": "warn",
-    "@typescript-eslint/no-explicit-any": "off"
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/explicit-module-boundary-types": "off"
   }
 }
