--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
     "cookiefile": "^1.0.10",
     "dotenv": "^10.0.0",
     "minimist": "^1.2.5",
-    "node-fetch": "^2.6.1",
-    "puppeteer": "^10.1.0",
+    "puppeteer": "^10.4.0",
+    "rxjs": "^7.3.1",
+    "tslib": "^2.3.1",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.30",
     "@types/minimist": "^1.2.2",
-    "@types/node": "^16.3.3",
-    "@types/node-fetch": "^2.5.11",
-    "@typescript-eslint/eslint-plugin": "^4.28.4",
-    "@typescript-eslint/parser": "^4.28.4",
-    "eslint": "^7.31.0",
-    "tslib": "^2.3.0",
-    "typescript": "^4.3.5"
+    "@types/node": "^16.10.2",
+    "@typescript-eslint/eslint-plugin": "^4.32.0",
+    "@typescript-eslint/parser": "^4.32.0",
+    "eslint": "^7.32.0",
+    "typescript": "^4.4.3"
   }
 }
