--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "puppeteer": "^10.4.0",
     "rxjs": "^7.3.1",
     "tslib": "^2.3.1",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@types/cheerio": "^0.22.30",
